Handle HowIs->Inq rename; prepare for Inq v26.

--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: HowIs
+title: Inq
 email:
 description: > # this means to ignore newlines until "baseurl:"
-  HowIs is a tool for assessing the state of a codebase hosted on GitHub.
+  Inq is a tool for assessing the state of a codebase hosted on GitHub.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: duckinator
-github_username:  how-is
+github_username:  duckinator/inq
 
 header_pages:
   - index.md
